tests/use_after_move1.stderr
Error: Potential use after move
    ╭─[preproccessed_file.c:1:1]
    │
 32 │     free(p1);
    │          ─┬  
    │           ╰── The value is moved here
 33 │     p1[0] = 5;
    │     ──┬──  
    │       ╰──── The value is used here after move
────╯